# ManzAI_Studio

./: .coverage  .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  INTEGRATION_TEST_REPORT.md  LICENSE  Makefile  PRD.md  README.md  complete_integration_demo.py  complete_integration_results.json  docker-compose.dev.yml  docker-compose.yml  integrate_code.py  integration_demo.py  integration_demo_results.json  mypy.ini  pyproject.toml  requirements.txt  run_server.py  test_frontend.html
.claude/commands/: bash-best-practices.md  check-ci.md  deploy.md  dev-start.md  pr-review.md  test-run.md  troubleshoot.md
.claude/scripts/: auto-ci-check.sh
.cursor/rules/: python.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/app/: config.py
backend/app/routes/: api.py
backend/tests/: conftest.py
docker/backend/: Dockerfile  Dockerfile.dev
docker/frontend/: Dockerfile  Dockerfile.dev  nginx.conf
docs/: API_DOCUMENTATION.md  APP_FLOW.md  ARCHITECTURE.md  BACKEND_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  FRONTEND_GUIDE.md  PRD.md  README.md  api_reference.md  cicd-coderabbit-implementation-guide.md  developer_guide.md  environment_setup.md  error_handling.md  installation_guide.md  live2d_research.md  model_setup.md  prompt_guide.md  test_debugging_guide.md  user_guide.md  voicevox_research.md  テスト計画書  テスト計画書2.md  懸念事項.md  考慮漏れ点.md
docs/api/: openapi.yaml
docs/dev_plan/: dev_plan1.md  dev_plan2.md  dev_plan3.md  dev_plan4.md  dev_plan5.md  dev_plan6.md  dev_plan7.md  dev_plan7_completed.md  dev_plan8.md  dev_plan_overview.md
docs/tests_bugs/: 20250320-001-mock-configuration.md  template.md
frontend/: jest.config.js  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/public/live2d/models/default/: model.json
frontend/src/: App.css  App.js  App.test.js  index.css  setupTests.js
frontend/src/components/: AudioPlayer.js  AudioPlayer.test.js  DisplayWindow.js  DisplayWindow.test.js  InputForm.js  InputForm.test.js  Live2DDisplay.js  Live2DDisplay.test.js
frontend/src/components/settings/: ModelManager.js  PromptEditor.js  SettingsPage.js
frontend/src/services/: api.js  modelService.js  promptService.js
frontend/src/stores/: characterStore.js
frontend/src/utils/: lipSync.js  lipSync.test.js  live2d.js  windowManager.js  windowManager.test.js
scripts/: create_model_metadata.js  deploy.sh  test_debug_helper.py  test_full_manzai.py  test_voice_synthesis.py
src/: __init__.py  app.py  config.py
src/backend/: __init__.py
src/backend/app/: __init__.py  config.py
src/backend/app/models/: __init__.py  audio.py  script.py  service.py
src/backend/app/routes/: __init__.py  api.py  models.py  prompts.py
src/backend/app/services/: audio_manager.py  ollama_service.py  voicevox_service.py
src/backend/app/templates/: manzai_prompt.meta.json  manzai_prompt.txt
src/backend/app/templates/prompts/: 64136b35-21d7-4007-8ad2-7715c7f67f55.json
src/backend/app/utils/: audio_manager.py  error_handlers.py  exceptions.py  logger.py  mock_data.py  prompt_loader.py  validators.py
src/backend/tests/: test_api.py
src/manzai_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: __init__.py  script.py  service.py
src/models.bak/: __init__.py
src/routes/: api.py
src/services/: ollama_service.py  voicevox_service.py
src/utils/: __init__.py  audio_manager.py  mock_data.py  prompt_loader.py
tests/: conftest.py  run_tests.py  test_api.py  test_api_real.py  test_audio_manager.py  test_config.py  test_integration.py  test_integration_real.py  test_models.py  test_prompt_loader.py  test_services.py  test_services_real.py
tests/api/: test_backend_api.py  test_concurrent_requests.py  test_edge_cases.py  test_generate_endpoint.py  test_health_endpoint.py  test_input_validation.py  test_model_registration_endpoint.py  test_models_endpoint.py  test_prompts_endpoint.py  test_speakers_endpoint.py  test_synthesize_endpoint.py
tests/e2e/: test_basic_e2e.py
tests/integration/: test_full_manzai.py  test_voice_synthesis.py
tests/services/: test_audio_manager.py  test_ollama_service.py  test_service_fallbacks.py  test_voicevox_service.py
tests/unit/: test_debug_helper.py
tests/utils/: test_helpers.py  test_prompt_loader.py  test_validators.py
