[tool.poetry]
name = "manzai-studio"
version = "0.1.0"
description = "ローカルで動作する漫才生成・実演Webアプリケーション"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-cors = "^4.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
soundfile = "^0.12.1"
numpy = "^1.26.4"
pydantic = "^2.10.6"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240218"
types-flask = "^1.1.6"
types-flask-cors = "^4.0.0.20240106"

[tool.poetry.scripts]
start = "src.app:run"
test = "pytest:main"
coverage = "pytest:main --cov=src --cov-report=term-missing"
lint = "flake8:main"
format = "black:main src tests"
type-check = "mypy:main src tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing" 