[tool.poetry]
name = "manzai-studio"
version = "0.1.0"
description = "ManzAI Studio - AIを活用した漫才スクリプト生成・音声合成システム"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
flask = "^2.0.0"
werkzeug = "^2.0.0"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
typing-extensions = "^4.0.0"
flask-cors = "^5.0.1"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.poetry.scripts]
start = "src.backend.app:app.run"
test = "pytest:main"
coverage = "pytest:main --cov=src --cov-report=term-missing"
lint = "flake8:main"
format = "black:main src tests"
type-check = "mypy:main src tests" 